syntax = "proto3";

package pcbook.v1;

import "pcbook/v1/laptop_message.proto";

option go_package = "github.com/kittichanr/pcbook/proto";
option java_package = "com.kittichanr.pcbook.generated";
option java_multiple_files = true;

message CreateLaptopRequest {Laptop laptop = 1;}

message CreateLaptopResponse {string id = 1;}

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {}
}
